# msnaf

./: Dockerfile  README.md  pyproject.toml
src/msnaf/: __init__.py  cli.py  core.py
tests/: run_fixture_comparison.py  test_core.py
